--- a/index.html
+++ b/index.html
@@ -18,17 +18,29 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Playfair+Display+SC&family=Playfair+Display:wght@500&family=Poppins&family=Roboto&family=Smooch&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="photography.css" />
   </head>
   <body>
     <div class="hero-section">
-      <h2>ROZZEY MARVIN</h2>
-      <h1>PHOTOGRAGHY</h1>
-      <p>
-        Nisl faucibus quis urna nibh ut amet. Diam suscipit pretium massa,
-        sollicitudin in risus in. Sagittis.
-      </p>
-      <div class="hero-button">
-        <a href="">GET STARTED</a>
+      <div class="card text-white">
+        <img src="images/hero-section-image.png" class="card-img" alt="..." />
+        <div class="card-img-overlay">
+          <h2 class="card-title">ROZZEY MARVIN</h2>
+          <h1 class="card-text">PHOTOGRAGHY</h1>
+          <p class="card-text">
+            Nisl faucibus quis urna nibh ut amet. Diam suscipit <br />
+            pretium massa, sollicitudin in risus in. Sagittis.
+          </p>
+          <div class="hero-button mt-5">
+            <a href="">GET STARTED</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
