Added more photos to the homepage

--- a/index.html
+++ b/index.html
@@ -42,6 +42,84 @@
           </div>
         </div>
       </div>
+      <div class="homepage-content">
+        <div class="container homepage-row mt-5">
+          <div class="row">
+            <div class="col-4">
+              <img class="img-fluid" src="images/homepage-image-1.png" alt="" />
+            </div>
+            <div class="col-4">
+              <img class="img-fluid" src="images/homepage-image-2.png" alt="" />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid frst-row-last-img"
+                src="images/homepage-image-3.png"
+                alt=""
+              />
+            </div>
+
+            <div class="col-4">
+              <img
+                class="img-fluid second-row"
+                src="images/homepage-image-4.png"
+                alt=""
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid second-row"
+                src="images/homepage-image-5.png"
+                alt=""
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid second-row-last-img"
+                src="images/homepage-image-6.png"
+                alt=""
+              />
+            </div>
+
+            <div class="col-4">
+              <img class="img-fluid" src="images/homepage-image-7.png" alt="" />
+            </div>
+            <div class="col-4">
+              <img class="img-fluid" src="images/homepage-image-8.png" alt="" />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid nineth-row-last-img"
+                src="images/homepage-image-9.png"
+                alt=""
+              />
+            </div>
+
+            <div class="col-4">
+              <img
+                class="img-fluid"
+                src="images/homepage-image-10.png"
+                alt=""
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid"
+                src="images/homepage-image-11.png"
+                alt=""
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid last-row-last-img"
+                src="images/homepage-image-12.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <br /><br />
+        </div>
+      </div>
     </div>
   </body>
 </html>
