Added shadow to the images

--- a/index.html
+++ b/index.html
@@ -46,14 +46,22 @@
         <div class="container homepage-row mt-5">
           <div class="row">
             <div class="col-4">
-              <img class="img-fluid" src="images/homepage-image-1.png" alt="" />
-            </div>
-            <div class="col-4">
-              <img class="img-fluid" src="images/homepage-image-2.png" alt="" />
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-1.png"
+                alt=""
+              />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid frst-row-last-img"
+                class="img-fluid shadow"
+                src="images/homepage-image-2.png"
+                alt=""
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid frst-row-last-img shadow"
                 src="images/homepage-image-3.png"
                 alt=""
               />
@@ -61,35 +69,43 @@
 
             <div class="col-4">
               <img
-                class="img-fluid second-row"
+                class="img-fluid second-row shadow"
                 src="images/homepage-image-4.png"
                 alt=""
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid second-row"
+                class="img-fluid second-row shadow"
                 src="images/homepage-image-5.png"
                 alt=""
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid second-row-last-img"
+                class="img-fluid second-row-last-img shadow"
                 src="images/homepage-image-6.png"
                 alt=""
               />
             </div>
 
             <div class="col-4">
-              <img class="img-fluid" src="images/homepage-image-7.png" alt="" />
-            </div>
-            <div class="col-4">
-              <img class="img-fluid" src="images/homepage-image-8.png" alt="" />
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-7.png"
+                alt=""
+              />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid nineth-row-last-img"
+                class="img-fluid shadow"
+                src="images/homepage-image-8.png"
+                alt=""
+              />
+            </div>
+            <div class="col-4">
+              <img
+                class="img-fluid nineth-row-last-img shadow"
                 src="images/homepage-image-9.png"
                 alt=""
               />
@@ -97,21 +113,21 @@
 
             <div class="col-4">
               <img
-                class="img-fluid"
+                class="img-fluid shadow"
                 src="images/homepage-image-10.png"
                 alt=""
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid"
+                class="img-fluid shadow"
                 src="images/homepage-image-11.png"
                 alt=""
               />
             </div>
             <div class="col-4">
               <img
-                class="img-fluid last-row-last-img"
+                class="img-fluid last-row-last-img shadow"
                 src="images/homepage-image-12.png"
                 alt=""
               />
