Added the navigation bar to the homepage and restructured it

--- a/index.html
+++ b/index.html
@@ -24,9 +24,37 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Playfair+Display+SC&family=Playfair+Display:wght@500&family=Poppins&family=Roboto&family=Smooch&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/3517f2cd4f.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="photography.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">MARVIN</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="#">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="hero-section">
       <div class="card text-white">
         <img src="images/hero-section-image.png" class="card-img" alt="..." />
@@ -45,21 +73,21 @@
       <div class="homepage-content">
         <div class="container homepage-row mt-5">
           <div class="row">
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid shadow"
                 src="images/homepage-image-1.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid shadow"
                 src="images/homepage-image-2.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid frst-row-last-img shadow"
                 src="images/homepage-image-3.png"
@@ -67,21 +95,21 @@
               />
             </div>
 
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid second-row shadow"
                 src="images/homepage-image-4.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid second-row shadow"
                 src="images/homepage-image-5.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid second-row-last-img shadow"
                 src="images/homepage-image-6.png"
@@ -89,21 +117,21 @@
               />
             </div>
 
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid shadow"
                 src="images/homepage-image-7.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid shadow"
                 src="images/homepage-image-8.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid nineth-row-last-img shadow"
                 src="images/homepage-image-9.png"
@@ -111,21 +139,21 @@
               />
             </div>
 
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid shadow"
                 src="images/homepage-image-10.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid shadow"
                 src="images/homepage-image-11.png"
                 alt=""
               />
             </div>
-            <div class="col-4">
+            <div class="col-md-4">
               <img
                 class="img-fluid last-row-last-img shadow"
                 src="images/homepage-image-12.png"
@@ -135,6 +163,33 @@
           </div>
           <br /><br />
         </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <footer>
+          <div class="row">
+            <div class="col d-none d-lg-flex">
+              <h3>MARVIN</h3>
+            </div>
+            <div class="col-md social-links text-center">
+              <a
+                href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
+                target="_blank"
+                ><i class="fa fa-linkedin" aria-hidden="true"></i
+              ></a>
+              <a href="https://github.com/marvinrose/" target="_blank"
+                ><i class="fa fa-github" aria-hidden="true"></i
+              ></a>
+              <a href="https://instagram.com/rozzey_marvin/" target="_blank"
+                ><i class="fa fa-instagram" aria-hidden="true"></i
+              ></a>
+            </div>
+            <div class="col-md text-center">
+              <small>&copy;2022- Made with ❤️ by Marvinrose</small>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
