--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="photography.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg fixed-top">
       <div class="container">
         <a class="navbar-brand fw-bold" href="#">MARVIN</a>
         <button
@@ -65,7 +65,7 @@
             Nisl faucibus quis urna nibh ut amet. Diam suscipit <br />
             pretium massa, sollicitudin in risus in. Sagittis.
           </p>
-          <div class="hero-button mt-5">
+          <div class="hero-button">
             <a href="">GET STARTED</a>
           </div>
         </div>
