Edited the about page

--- a/about.html
+++ b/about.html
@@ -31,44 +31,113 @@
     <link rel="stylesheet" href="photography.css" />
   </head>
   <body>
-    <div class="row about-section container-fluid">
-      <div class="col-6">
-        <img
-          class="img-fluid shadow about-image"
-          src="images/hero-section-image.png"
-          alt=""
-        />
+    <div class="about-page">
+      <div class="row about-section mb-5 container-fluid d-none d-lg-flex">
+        <div class="col-6">
+          <img
+            class="img-fluid shadow about-image"
+            src="images/hero-section-image.png"
+            alt=""
+          />
+        </div>
+        <div class="col-6">
+          <h2 class="mt-5">ABOUT ME</h2>
+          <h1 class="mt-3 mb-3">ROZZEY MARVIN</h1>
+          <p class="mb-4">
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+            sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut
+            amet diam suscipit pretium massa, sollicitudin in risus in.
+            Sagittis.
+          </p>
+          <div class="col-md social-links text-start mb-4">
+            <a
+              href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
+              target="_blank"
+              ><i class="fa fa-linkedin" aria-hidden="true"></i
+            ></a>
+            <a href="https://github.com/marvinrose/" target="_blank"
+              ><i class="fa fa-github" aria-hidden="true"></i
+            ></a>
+            <a href="https://instagram.com/rozzey_marvin/" target="_blank"
+              ><i class="fa fa-instagram" aria-hidden="true"></i
+            ></a>
+          </div>
+          <h2 class="mb-3">MY CAMERA</h2>
+
+          <div class="camera-section">
+            <img class="img-fluid" src="images/camera-image.png" alt="" />
+            <span>Olympus PEN-F Kamera Mirrorlees</span>
+          </div>
+
+          <div class="about-button mt-5">
+            <a href="">CONTACT ME</a>
+          </div>
+        </div>
       </div>
-      <div class="col-6">
-        <h2 class="mt-5">ABOUT ME</h2>
-        <h1 class="mt-3 mb-3">ROZZEY MARVIN</h1>
-        <p class="mb-4">
-          Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
-          sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut amet
-          diam suscipit pretium massa, sollicitudin in risus in. Sagittis.
-        </p>
-        <div class="col-md social-links text-start mb-4">
-          <a
-            href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
-            target="_blank"
-            ><i class="fa fa-linkedin" aria-hidden="true"></i
-          ></a>
-          <a href="https://github.com/marvinrose/" target="_blank"
-            ><i class="fa fa-github" aria-hidden="true"></i
-          ></a>
-          <a href="https://instagram.com/rozzey_marvin/" target="_blank"
-            ><i class="fa fa-instagram" aria-hidden="true"></i
-          ></a>
-        </div>
-        <h2 class="mb-3">MY CAMERA</h2>
+      <div class="mobile-view-section mb-5 d-block d-lg-none">
+        <div class="container about-section">
+          <h2 class="">ABOUT ME</h2>
+          <h1>ROZZEY MARVIN</h1>
+          <img
+            class="img-fluid mobile-view-image mb-4 mt-3 mx-auto d-block shadow"
+            src="images/hero-section-image.png"
+            alt=""
+          />
+          <p class="text-center">
+            Nisl faucibus quis urna nibh ut amet diam suscipit pretium massa
+            sollicitudin in risus in sagittis nisl faucibus quis urna nibh ut
+            amet diam suscipit pretium massa, sollicitudin in risus in.
+            Sagittis.
+          </p>
+          <div class="col-md social-links text-center mb-4">
+            <a
+              href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
+              target="_blank"
+              ><i class="fa fa-linkedin" aria-hidden="true"></i
+            ></a>
+            <a href="https://github.com/marvinrose/" target="_blank"
+              ><i class="fa fa-github" aria-hidden="true"></i
+            ></a>
+            <a href="https://instagram.com/rozzey_marvin/" target="_blank"
+              ><i class="fa fa-instagram" aria-hidden="true"></i
+            ></a>
+          </div>
+          <h2 class="mb-3 text-center">MY CAMERA</h2>
 
-        <div class="camera-section">
-          <img class="img-fluid" src="images/camera-image.png" alt="" />
-          <span>Olympus PEN-F Kamera Mirrorlees</span>
-        </div>
+          <div class="camera-section mx-auto d-block">
+            <img class="img-fluid" src="images/camera-image.png" alt="" />
+            <span>Olympus PEN-F Kamera Mirrorlees</span>
+          </div>
 
-        <div class="about-button mt-5">
-          <a href="">CONTACT ME</a>
+          <div class="about-button mt-5 text-center">
+            <a href="">CONTACT ME</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="last-about-section homepage-row container">
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              class="img-fluid shadow"
+              src="images/homepage-image-1.png"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              class="img-fluid shadow"
+              src="images/homepage-image-2.png"
+              alt=""
+            />
+          </div>
+          <div class="col-md-4">
+            <img
+              class="img-fluid shadow"
+              src="images/homepage-image-3.png"
+              alt=""
+            />
+          </div>
         </div>
       </div>
     </div>
