Restructured the about page

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
       </div>
       <div class="mobile-view-section mb-5 d-block d-lg-none">
         <div class="container about-section">
-          <h2 class="">ABOUT ME</h2>
+          <h2 class="pt-5">ABOUT ME</h2>
           <h1>ROZZEY MARVIN</h1>
           <img
             class="img-fluid mobile-view-image mb-4 mt-3 mx-auto d-block shadow"
@@ -109,31 +109,32 @@
             <span>Olympus PEN-F Kamera Mirrorlees</span>
           </div>
 
-          <div class="about-button mt-5 text-center">
+          <div class="about-button mt-4 text-center">
             <a href="">CONTACT ME</a>
           </div>
         </div>
       </div>
 
-      <div class="last-about-section homepage-row container">
-        <div class="row">
-          <div class="col-md-4">
+      <div class="last-about-section container pb-5">
+        <div class="row about-images">
+          <div class="col-md-4 about-image-first">
             <img
               class="img-fluid shadow"
               src="images/homepage-image-1.png"
               alt=""
             />
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 about-image-second">
             <img
-              class="img-fluid shadow"
+              class="img-fluid shadow about-images"
               src="images/homepage-image-2.png"
               alt=""
             />
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 about-image-third">
             <img
               class="img-fluid shadow"
+              width="275px"
               src="images/homepage-image-3.png"
               alt=""
             />
