--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="#">Home</a>
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="about.html">About</a>
             <a class="nav-link" href="#">Gallery</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
