Added contents to the gallery.html page

--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,133 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <!-- CSS only -->
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Playfair+Display+SC&family=Playfair+Display:wght@500&family=Poppins&family=Roboto&family=Smooch&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/3517f2cd4f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="photography.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="gallery-header">GALLERY</h1>
+    </div>
+    <div class="homepage-content">
+        <div class="container homepage-row mt-5 gallery-section">
+          <div class="row">
+            <div class="col-md-4">
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-1.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-2.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid frst-row-last-img shadow"
+                src="images/homepage-image-3.png"
+                alt=""
+              />
+            </div>
+
+            <div class="col-md-4">
+              <img
+                class="img-fluid second-row shadow"
+                src="images/homepage-image-4.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid second-row shadow"
+                src="images/homepage-image-5.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid second-row-last-img shadow"
+                src="images/homepage-image-6.png"
+                alt=""
+              />
+            </div>
+
+            <div class="col-md-4">
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-7.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-8.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid nineth-row-last-img shadow"
+                src="images/homepage-image-9.png"
+                alt=""
+              />
+            </div>
+
+            <div class="col-md-4">
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-10.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid shadow"
+                src="images/homepage-image-11.png"
+                alt=""
+              />
+            </div>
+            <div class="col-md-4">
+              <img
+                class="img-fluid last-row-last-img shadow"
+                src="images/homepage-image-12.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <br /><br />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
