--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="navbar-nav">
             <a class="nav-link" href="/">Home</a>
             <a class="nav-link" href="about.html">About</a>
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
         </div>
