Edited the website

--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
     <link rel="stylesheet" href="photography.css" />
   </head>
   <body>
-    <div class="container">
-      <h1 class="gallery-header">GALLERY</h1>
+    <div class="container gallery-page">
+      <h1 class="gallery-header ">GALLERY</h1>
     </div>
     <div class="homepage-content">
         <div class="container homepage-row mt-5 gallery-section">
