Completed the photography project

--- a/about.html
+++ b/about.html
@@ -31,6 +31,30 @@
     <link rel="stylesheet" href="photography.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="#">MARVIN</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
+            <a class="nav-link" href="contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="about-page">
       <div class="row about-section mb-5 container-fluid d-none d-lg-flex">
         <div class="col-6">
@@ -140,6 +164,33 @@
             />
           </div>
         </div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <footer>
+          <div class="row">
+            <div class="col d-none d-lg-flex">
+              <h3>MARVIN</h3>
+            </div>
+            <div class="col-md social-links text-center">
+              <a
+                href="https://www.linkedin.com/in/marvinrose-chibuezem-3a65b221b"
+                target="_blank"
+                ><i class="fa fa-linkedin" aria-hidden="true"></i
+              ></a>
+              <a href="https://github.com/marvinrose/" target="_blank"
+                ><i class="fa fa-github" aria-hidden="true"></i
+              ></a>
+              <a href="https://instagram.com/rozzey_marvin/" target="_blank"
+                ><i class="fa fa-instagram" aria-hidden="true"></i
+              ></a>
+            </div>
+            <div class="col-md text-center">
+              <small>&copy;2022- Made with ❤️ by Marvinrose</small>
+            </div>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
