--- a/contact.html
+++ b/contact.html
@@ -55,102 +55,30 @@
         </div>
       </div>
     </nav>
-    <div class="container gallery-page">
-      <h1 class="gallery-header ">GALLERY</h1>
-    </div>
-    <div class="homepage-content">
-        <div class="container homepage-row mt-5 gallery-section">
-          <div class="row">
-            <div class="col-md-4">
-              <img
-                class="img-fluid shadow"
-                src="images/homepage-image-1.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid shadow"
-                src="images/homepage-image-2.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid frst-row-last-img shadow"
-                src="images/homepage-image-3.png"
-                alt=""
-              />
-            </div>
+    <div class="container contact-page">
+      <h1 class="contact-header text-start text-white mb-5">
+        Let's get in touch!
+      </h1>
 
-            <div class="col-md-4">
-              <img
-                class="img-fluid second-row shadow"
-                src="images/homepage-image-4.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid second-row shadow"
-                src="images/homepage-image-5.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid second-row-last-img shadow"
-                src="images/homepage-image-6.png"
-                alt=""
-              />
-            </div>
-
-            <div class="col-md-4">
-              <img
-                class="img-fluid shadow"
-                src="images/homepage-image-7.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid shadow"
-                src="images/homepage-image-8.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid nineth-row-last-img shadow"
-                src="images/homepage-image-9.png"
-                alt=""
-              />
-            </div>
-
-            <div class="col-md-4">
-              <img
-                class="img-fluid shadow"
-                src="images/homepage-image-10.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid shadow"
-                src="images/homepage-image-11.png"
-                alt=""
-              />
-            </div>
-            <div class="col-md-4">
-              <img
-                class="img-fluid last-row-last-img shadow"
-                src="images/homepage-image-12.png"
-                alt=""
-              />
-            </div>
-          </div>
-          <br /><br />
-        </div>
+      <div class="contact-section">
+        <h3 class="mb-2">Address</h3>
+        <p class="mb-4 text-white">
+          <i class="fa fa-map-marker text-white" aria-hidden="true"></i> Ojo,
+          Lagos, Nigeria. <br />(Also Remote)
+        </p>
+        <h3 class="mb-2">Email</h3>
+        <p class="mb-4 mail text-white">
+          <a href="mailto:rozzeymarvin32@gmail.com">
+            <span class="mail-icon text-white"
+              ><i class="fa fa-envelope-o" aria-hidden="true"></i
+            ></span>
+            rozzeymarvin32@gmail.com
+          </a>
+        </p>
+        <h3 class="mb-2">Phone</h3>
+        <p class="mobile mb-5 text-white">
+          <i class="fa fa-phone" aria-hidden="true"></i> (+234) 08127159034
+        </p>
       </div>
     </div>
     <div class="footer">
